# cppThings

./: CMakeLists.txt  main.cpp  text.txt
algorithms/: algorithms_main.cpp
algorithms/sorts/: sorts.cpp  sorts.h
bits/: bits_main.cpp
desgin_patterns/: ref.md
desgin_patterns/behavior/: chian_of_responsibility.h  command.h  iterator.h  mediator.h  memento.h  observer.h  state.h  strategy.h  template_method.h  visitor.h
desgin_patterns/creates/: abstract_factory.h  builder.h  factory_method.h  prototype.h  singleton.h
desgin_patterns/struct/: adapter.h  bridge.h  composite.h  decorator.h  facade.h  flyweight.h  proxy.h
marco/: compile_marco.sh  marco_hpp.h
static/: static_main.cpp  static_main.h
string_test/: string_main.cpp  string_main.h
template/: template_cpp.cpp  template_hpp.h
vtable/: vtable_main.cpp
